@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_grp_utl.h,v 1.108 2012-10-31 19:51:48 pvicente Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/nco_grp_utl.h,v 1.109 2012-11-01 22:10:55 pvicente Exp $ */
 
 /* Purpose: Group utilities */
 
@@ -388,9 +388,8 @@ nco_grp_lst_mk_trv                     /* [fnc] Create groups/variables in outpu
  const int lmt_all_lst_nbr,            /* I [nbr] Number of hyperslab limits */
  const int dfl_lvl,                    /* I [enm] Deflate level [0..9] */
  nco_bool PRN_VAR_METADATA,            /* I [flg] Copy variable metadata (attributes) */
- nco_bool PRN_GLB_METADATA,            /* I [flg] Copy global variable metadata (attributes) */
- int const cnk_map_ptr,                /* I [enm] Chunking map */
- int const cnk_plc_ptr,                /* I [enm] Chunking policy */
+ int * const cnk_map_ptr,              /* I [enm] Chunking map */
+ int * const cnk_plc_ptr,              /* I [enm] Chunking policy */
  const size_t cnk_sz_scl,              /* I [nbr] Chunk size scalar */
  CST_X_PTR_CST_PTR_CST_Y(cnk_sct,cnk), /* I [sct] Chunking information */
  const int cnk_nbr,                    /* I [nbr] Number of dimensions with user-specified chunking */
