@@ -1,3 +1,9 @@
+2012-11-01  Pedro Vicente  <pvicente@uci.edu>
+
+	* ncks regression test #26: Extract group attributes
+
+	* ncks: nco_grp_lst_mk_trv: Create groups/variables in output file 
+	
 2012-10-31  Charlie Zender  <zender@uci.edu>
 
  	* NCO 4.2.3 release procedure:
